# CMDPT

./: CNAME  LICENSE  README.md  index.html
Css/: min.css  style.css
Err/: Bugs.markdown
Js/: Commands.js  Config.js  Grapichs.js  Logo.js  Supriser.js
Linux/: CMakeLists.txt
Pages/: criar-pasta.html  criarArquivo.html  criarCopia.html  criarPasta.html  deletar.html  escreverArquivo.html  iniciar.html  instalar.html  mover.html  renomear.html  servidor.html
Server/: Config.ini  Servidor.py
Services/: criar_arquivo.cpp  criar_copia.cpp  criar_pasta.cpp  deletar.cpp  escrever_arquivo.cpp  mover_arquivo.cpp  mover_pasta.cpp  renomear_arquivo_erro.cpp  renomear_pasta_erro.cpp
Windows/: CMakeLists.txt
docs/: CNAME
include/: Commands.h  Serve.c  Serve.h  Ultis.h  teste_json.c
include/cJSON/: cJSON_test
include/cmPT/: copyFolder.h  createFile.h  createFolder.h  deleteFolder.h  moveFile.h  moveFolder.h  renameFile.h  renameFolder.h  writeFile.h
include/curl/: Makefile
include/service/: criar_arquivo.cpp  criar_copia.cpp  criar_pasta.cpp  deletar.cpp  escrever_arquivo.cpp  mover_arquivo.cpp  mover_pasta.cpp  renomear_arquivo.cpp  renomear_pasta.cpp
include/utils/: helpSys.c
lib/cJSON/: libcjson.so.1.7.18  libcjson_utils.so.1.7.18
lib/curl/: libcurl.lai
src/: CMPT  main.cpp
test/: criar_arquivo_test  criar_copia_test  criar_pasta_test  deletar_test  escrever_arquivo_test  mover_arquivo_test  mover_pasta_test  renomear_arquivo_test_erro  renomear_pasta_test_erro  servidor_CMPT_test
